@@ -1,3 +1,10 @@
+2010-11-24  Alan Modra  <amodra@gmail.com>
+
+	PR ld/12253
+	* elf-eh-frame.c (_bfd_elf_write_section_eh_frame): Correct
+	DW_EH_PE_datarel handling.  Truncate .eh_frame_hdr address to
+	ptr_size.
+
 2010-11-23  Mingming Sun  <mingm.sun@gmail.com>
 
 	* elfxx-mips.c (mips_set_isa_flags): Move bfd_mach_loongson_3a
